force-app/main/default/objects/custom_create132__c/custom_create132__c.object-meta.xml
<CustomObject>
    <label>Custom created object132</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects132</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>