force-app/main/default/objects/custom_create132__c/fields/custom_create_132field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_132field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 132field545</label>
    <type>Checkbox</type>
</CustomField>